--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.5.1",
     "element-plus": "^2.4.1",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
